@@ -4,6 +4,8 @@ Changes between 1.4.8 and 1.4.9.DEV
 - changed iniconfig parsing to better conform, now the chars ";"
   and "#" only mark a comment at the stripped start of a line
 - include recent apipkg-1.2
+- change internal terminalwriter.line/reline logic to more nicely
+  support file spinners
 
 Changes between 1.4.7 and 1.4.8
 ==================================================
